@@ -8,6 +8,8 @@ Legend:
 
 Version 0.2.6 - ??
 - [new] Add YUILoader support for "combine" and "comboBase".
+- [bugfix] WFSubmit's duplicateSubmitMessage feature now works again. It was broken when WFSubmit started using WFAction.
+  NOTE: WFAction now detects "event.stopped" after calling the PHOCOA.widgets['<widgetId>'].events['<event>'].handleEvent function. Use e.stop() to prevent the WFAction from occurring.
 
 Version 0.2.5 - 6/29/2009
 - [BC-break] Updated the behavior of WFRequestController::WFURL to be consisent with other fuctions; now never ends in a trailing '/'.
